Refactored rna-transcription